[package]
name = "arugio_server"
version = "0.1.0"
authors = ["ostwilkens <carl@ostwilkens.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arugio_shared = { path = "../arugio_shared" }
rand = "0.8.1"
serde = { version = "1.0.117", features = ["derive"] }
turbulence = "0.3"
bevy_networking_turbulence = { version = "0.1.0", default-features = false, features = ["use-webrtc"] }
bevy = { version = "0.4.0", default-features = false }
