[package]
name = "arugio_shared"
version = "0.1.0"
authors = ["ostwilkens <carl@ostwilkens.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
bevy_networking_turbulence = { version = "0.2.0", default-features = false, features = ["use-webrtc"] }
bevy = { version = "0.4.0", default-features = false }
